upgrade to jdk 17, cleanup code