@@ -1,18 +1,12 @@
 package de.kah2.zodiac.libZodiac.example;
 
-import de.kah2.zodiac.libZodiac.Calendar;
-import de.kah2.zodiac.libZodiac.CalendarStub;
-import de.kah2.zodiac.libZodiac.DateRange;
-import de.kah2.zodiac.libZodiac.Day;
-import de.kah2.zodiac.libZodiac.DayStorableDataSet;
-import de.kah2.zodiac.libZodiac.TestConstantsAndHelpers;
+import de.kah2.zodiac.libZodiac.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.time.LocalDate;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This class shows how to create, store, load and extend a {@link Calendar}.
@@ -20,11 +14,6 @@ import java.util.stream.Collectors;
  * @author kahles
  */
 public class CalendarExampleStorage {
-
-	static {
-		// Uncomment to have detailed output:
-		// TestConstantsAndHelpers.enableLogging();
-	}
 
 	private final static Logger LOG = LoggerFactory.getLogger(CalendarExampleStorage.class);
 
@@ -48,17 +37,20 @@ public class CalendarExampleStorage {
 		Calendar calendar = new CalendarStub(range, scope);
 
 		// For this example we use a List as database
-		final List<DayStorableDataSet> fakeDatabase = new LinkedList<>();
 
-		CalendarExampleStorage.LOG.info("Generating Calendar for DateRange: " + range);
+		CalendarExampleStorage.LOG.info( "Generating Calendar for DateRange: {}", range );
 		TestConstantsAndHelpers.generateAndWaitFor(calendar);
 		LinkedList<Day> generated = calendar.getNewlyGenerated();
-		CalendarExampleStorage.LOG.info("=> Data generated: " + generated.getFirst().getDate() + " -> " + generated.getLast().getDate());
+		CalendarExampleStorage.LOG.info( "=> Data generated: {} -> {}",
+				generated.getFirst().getDate(),
+				generated.getLast().getDate() );
 
 		// Here we can store the newly created days for next time ...
 		// Have a look at DayStorableDataSet, which is intended to be
 		// extended with serialization methods.
-		fakeDatabase.addAll(generated.stream().map(DayStorableDataSet::new).collect(Collectors.toList()));
+		final List<DayStorableDataSet> fakeDatabase = new java.util.ArrayList<>( generated.stream()
+				.map( DayStorableDataSet::new )
+				.toList() );
 
 		// Display the results to the user and the user closes our application
 		// afterwards.
@@ -75,16 +67,20 @@ public class CalendarExampleStorage {
 		calendar.importDays(fakeDatabase);
 
 		LinkedList<Day> days = calendar.getAllDays();
-		CalendarExampleStorage.LOG.info("Data loaded: " + days.getFirst().getDate() + " -> " + days.getLast().getDate());
+		CalendarExampleStorage.LOG.info( "Data loaded: {} -> {}", days.getFirst().getDate(), days.getLast().getDate() );
 
 		// And generate the new ones:
-		CalendarExampleStorage.LOG.info("Generating Calendar for DateRange: " + range);
+		CalendarExampleStorage.LOG.info( "Generating Calendar for DateRange: {}", range );
 		TestConstantsAndHelpers.generateAndWaitFor(calendar);
 		generated = calendar.getNewlyGenerated();
-		CalendarExampleStorage.LOG.info("=> Data generated: " + generated.getFirst().getDate() + " -> " + generated.getLast().getDate());
+		CalendarExampleStorage.LOG.info( "=> Data generated: {} -> {}",
+				generated.getFirst().getDate(),
+				generated.getLast().getDate() );
 
 		// Store the newly created ...
-		fakeDatabase.addAll(generated.stream().map(DayStorableDataSet::new).collect(Collectors.toList()));
+		fakeDatabase.addAll( generated.stream()
+				.map(DayStorableDataSet::new)
+				.toList() );
 
 		// Display the results and close the application
 		// (...)
@@ -100,18 +96,18 @@ public class CalendarExampleStorage {
 		calendar.importDays(fakeDatabase);
 
 		days = calendar.getAllDays();
-		CalendarExampleStorage.LOG.info("Data loaded: " + days.getFirst().getDate() + " -> " + days.getLast().getDate());
+		CalendarExampleStorage.LOG.info( "Data loaded: {} -> {}", days.getFirst().getDate(), days.getLast().getDate() );
 
-		CalendarExampleStorage.LOG.info("Generating Calendar for DateRange: " + range);
+		CalendarExampleStorage.LOG.info( "Generating Calendar for DateRange: {}", range );
 		TestConstantsAndHelpers.generateAndWaitFor(calendar);
 		generated = calendar.getNewlyGenerated();
-		CalendarExampleStorage.LOG.info("=> Data generated: " + generated.getFirst().getDate() + " -> " + generated.getLast().getDate());
+		CalendarExampleStorage.LOG.info( "=> Data generated: {} -> {}", generated.getFirst().getDate(), generated.getLast().getDate() );
 
 		// Now we have an inconsistent Calendar containing a gap and should:
 
 		// Remove past (or all) days that aren't needed anymore ...
 		final LinkedList<Day> removed = calendar.removeOverhead(false);
-		CalendarExampleStorage.LOG.info("Removed overhead: " + removed.getFirst().getDate() + " -> " + removed.getLast().getDate());
+		CalendarExampleStorage.LOG.info( "Removed overhead: {} -> {}", removed.getFirst().getDate(), removed.getLast().getDate() );
 
 		// OR correct the expectedRange to include imported days ...
 //		calendar.fixRangeExpectedToIncludeExistingDays();
